collapse fixed

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,14 +1,3 @@
-.carousel-img {
-  display: block;
-  width: 100%;
-}
-
-.carousel-item {
-  height: 450px;
-}
-
-.carousel-item-1 {
-  // object-position: bottom;
-  object-fit: cover;
-  object-position: center;
+.carousel-inner {
+  max-height: 450px;
 }
